--- a/www.nass.gov.ng/521892477dce86567b63355160ecde1a76eeecf5.yml
+++ b/www.nass.gov.ng/521892477dce86567b63355160ecde1a76eeecf5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 18:56:44 GMT
+    - Fri, 23 Jun 2017 21:41:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JU9Jajnv%2Cms5HPTSX0Vh92; path=/
+    - PHPSESSID=L7EVYW4%2Cy2FsN8xu2VBz10; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 18:56:44 GMT
+recorded_at: Fri, 23 Jun 2017 21:41:57 GMT
