--- a/www.nass.gov.ng/f4b039f5ffd9d0be34dc855274c1ff02ce28374d.yml
+++ b/www.nass.gov.ng/f4b039f5ffd9d0be34dc855274c1ff02ce28374d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 18:58:11 GMT
+    - Fri, 23 Jun 2017 21:44:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oX8BYyP8qBgjWZU6eN%2CaI0; path=/
+    - PHPSESSID=w1nhRwf2AMeXotVfVp1PW0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 18:58:11 GMT
+recorded_at: Fri, 23 Jun 2017 21:44:37 GMT
