--- a/www.nass.gov.ng/e453cba713abf2acd595ca0c278bf195cede46ef.yml
+++ b/www.nass.gov.ng/e453cba713abf2acd595ca0c278bf195cede46ef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:08:55 GMT
+    - Fri, 23 Jun 2017 21:57:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mS0iKspeC4G7Uw9dQNdOy3; path=/
+    - PHPSESSID=%2C3aFTn51hWYdYE6v%2Cb4yx3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:08:55 GMT
+recorded_at: Fri, 23 Jun 2017 21:57:27 GMT
