--- a/www.nass.gov.ng/1737ae0b0e1da5384aab8e82fb91214811eb5e36.yml
+++ b/www.nass.gov.ng/1737ae0b0e1da5384aab8e82fb91214811eb5e36.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:09:11 GMT
+    - Fri, 23 Jun 2017 21:57:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xK37Iw%2Cy8THXjDArbh1dy3; path=/
+    - PHPSESSID=OXMKkr%2CB-VE7OdpgepR152; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:09:11 GMT
+recorded_at: Fri, 23 Jun 2017 21:57:44 GMT
