--- a/www.nass.gov.ng/1e55565cfa7e4e519c21adbb59445f6f2a7d3494.yml
+++ b/www.nass.gov.ng/1e55565cfa7e4e519c21adbb59445f6f2a7d3494.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:12:24 GMT
+    - Fri, 23 Jun 2017 22:02:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PsAMbYn7O5THoU2j2jinG2; path=/
+    - PHPSESSID=eR5s8sVY2KJdwOSQ%2CzDML1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:12:24 GMT
+recorded_at: Fri, 23 Jun 2017 22:02:48 GMT
