--- a/www.nass.gov.ng/926525bb7d4257757c744bb7d6b97f6aac902828.yml
+++ b/www.nass.gov.ng/926525bb7d4257757c744bb7d6b97f6aac902828.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:15:59 GMT
+    - Fri, 23 Jun 2017 22:05:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rldaWSXJdwXyAV8w2fGeO0; path=/
+    - PHPSESSID=X2l6m%2CRtHoFCnSb4dsANj1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:15:59 GMT
+recorded_at: Fri, 23 Jun 2017 22:05:46 GMT
