--- a/www.nass.gov.ng/f868b36d8e39ad9fa96dd7833d1cbef80c5b5fc2.yml
+++ b/www.nass.gov.ng/f868b36d8e39ad9fa96dd7833d1cbef80c5b5fc2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:17:46 GMT
+    - Fri, 23 Jun 2017 22:08:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=OdyvwuW7BjFDeq06uWxCL3; path=/
+    - PHPSESSID=onSyqJT%2C520BrZuNEUJHw3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:17:46 GMT
+recorded_at: Fri, 23 Jun 2017 22:08:03 GMT
