--- a/www.nass.gov.ng/eaf5f46877e1ac1fe02c09828419d58492589aef.yml
+++ b/www.nass.gov.ng/eaf5f46877e1ac1fe02c09828419d58492589aef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:22:27 GMT
+    - Fri, 23 Jun 2017 22:10:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FwCsOuZeBM6%2C1YpiyZgd23; path=/
+    - PHPSESSID=9b65vpbkWTKica5gSYYA%2C2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:22:27 GMT
+recorded_at: Fri, 23 Jun 2017 22:10:40 GMT
