--- a/www.nass.gov.ng/f826858269bcf56e5518f7ad19c8282a4c4aaaf3.yml
+++ b/www.nass.gov.ng/f826858269bcf56e5518f7ad19c8282a4c4aaaf3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:26:54 GMT
+    - Fri, 23 Jun 2017 22:17:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UQtR7I1mMGOj46%2Cz6Q8D13; path=/
+    - PHPSESSID=YRMoprCYzzZ0R9r43y-NW0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:26:54 GMT
+recorded_at: Fri, 23 Jun 2017 22:17:04 GMT
