--- a/www.nass.gov.ng/bc55340c5441223b2b9461f9825a8ca5ec2203da.yml
+++ b/www.nass.gov.ng/bc55340c5441223b2b9461f9825a8ca5ec2203da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:27:54 GMT
+    - Fri, 23 Jun 2017 22:18:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=m-xvS9Kde2WoI4pAhK-x33; path=/
+    - PHPSESSID=uFTx%2C-jjQPM%2C7C2kVKi-Q2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:27:54 GMT
+recorded_at: Fri, 23 Jun 2017 22:18:00 GMT
