--- a/www.nass.gov.ng/f48bc6229c8c6db7ec2e751c9e18561b98fe3ff6.yml
+++ b/www.nass.gov.ng/f48bc6229c8c6db7ec2e751c9e18561b98fe3ff6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:34:42 GMT
+    - Fri, 23 Jun 2017 22:24:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=cqSGMJmOErIk%2C7SScC-L-0; path=/
+    - PHPSESSID=ej1rljZy%2CC2N%2CWjrbVWfz0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:34:42 GMT
+recorded_at: Fri, 23 Jun 2017 22:24:07 GMT
