--- a/www.nass.gov.ng/14370e5637ae929d023eb9a42ae10e004666b157.yml
+++ b/www.nass.gov.ng/14370e5637ae929d023eb9a42ae10e004666b157.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:37:50 GMT
+    - Fri, 23 Jun 2017 22:27:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Aly7Ty3hv%2CTwoj6QOdHMm2; path=/
+    - PHPSESSID=TE4iV9GbZ2oJW6tA%2CUwqm1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:37:50 GMT
+recorded_at: Fri, 23 Jun 2017 22:27:24 GMT
