--- a/www.nass.gov.ng/3e9369afad55f00afa8f38e40a2b36cacc5c32b6.yml
+++ b/www.nass.gov.ng/3e9369afad55f00afa8f38e40a2b36cacc5c32b6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:38:35 GMT
+    - Fri, 23 Jun 2017 22:29:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=heJo5qepdGqkfH1hnYM5R2; path=/
+    - PHPSESSID=7gfREb1oUb%2C15uAQ8fHJA0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:38:35 GMT
+recorded_at: Fri, 23 Jun 2017 22:29:08 GMT
