--- a/www.nass.gov.ng/d6ee9a1855eab7b9a85e02241c774c5206e72a1e.yml
+++ b/www.nass.gov.ng/d6ee9a1855eab7b9a85e02241c774c5206e72a1e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:39:56 GMT
+    - Fri, 23 Jun 2017 22:30:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ldTsXMOBnSPXETFbApw6h1; path=/
+    - PHPSESSID=J4%2Cyhq9VdURVw9Xs6aM3b0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:39:56 GMT
+recorded_at: Fri, 23 Jun 2017 22:30:38 GMT
