--- a/www.nass.gov.ng/a57edb402cce30220815226d5ca2c349c389e39c.yml
+++ b/www.nass.gov.ng/a57edb402cce30220815226d5ca2c349c389e39c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:47:07 GMT
+    - Fri, 23 Jun 2017 22:37:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Z6hKjmiaRjwTZaYvtEyGF0; path=/
+    - PHPSESSID=T4RofBtNc3duXe9C%2CJ0wi3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:47:07 GMT
+recorded_at: Fri, 23 Jun 2017 22:37:42 GMT
