--- a/www.nass.gov.ng/e9b4cee69bbfb51e65473160f50add380372a85f.yml
+++ b/www.nass.gov.ng/e9b4cee69bbfb51e65473160f50add380372a85f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:47:51 GMT
+    - Fri, 23 Jun 2017 22:38:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=u%2CfRt-zYlFBzdHAr0%2CqGM3; path=/
+    - PHPSESSID=hrM9QwfKgW9ABOGpuggOX2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:47:51 GMT
+recorded_at: Fri, 23 Jun 2017 22:38:00 GMT
