--- a/www.nass.gov.ng/4d5934314a5e8819ce9460cb9246e778dc278ffd.yml
+++ b/www.nass.gov.ng/4d5934314a5e8819ce9460cb9246e778dc278ffd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:51:22 GMT
+    - Fri, 23 Jun 2017 22:42:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HFL8Gfrhg9lPWD5SSq6KQ1; path=/
+    - PHPSESSID=K-v3-zJIaEu6RQ%2CIS9o%2Cw1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:51:22 GMT
+recorded_at: Fri, 23 Jun 2017 22:42:04 GMT
