--- a/www.nass.gov.ng/582557c62f5d523810a7a1fa2fbb52fd343b87e7.yml
+++ b/www.nass.gov.ng/582557c62f5d523810a7a1fa2fbb52fd343b87e7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:52:10 GMT
+    - Fri, 23 Jun 2017 22:43:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qBEvC%2C718PrIz1vKyJvxr0; path=/
+    - PHPSESSID=2YoFQJ8bx4gaGvmgUHkU62; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:52:10 GMT
+recorded_at: Fri, 23 Jun 2017 22:43:30 GMT
