--- a/www.nass.gov.ng/f17c9051724ae34ddcc104d3ad5c8686ca7469c8.yml
+++ b/www.nass.gov.ng/f17c9051724ae34ddcc104d3ad5c8686ca7469c8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 19:56:57 GMT
+    - Fri, 23 Jun 2017 22:48:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Pkud206IrWWigSf00O1Bo1; path=/
+    - PHPSESSID=bNmy26vh5VhUXaxxJ%2C93y3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 19:56:58 GMT
+recorded_at: Fri, 23 Jun 2017 22:48:18 GMT
