--- a/www.nass.gov.ng/37ca2108cd6d2c0c936710568960a17d3e81a7d3.yml
+++ b/www.nass.gov.ng/37ca2108cd6d2c0c936710568960a17d3e81a7d3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:01:24 GMT
+    - Fri, 23 Jun 2017 22:52:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=n1OrEmHcoMrbkct8l8z%2Cz1; path=/
+    - PHPSESSID=L7r1v%2CblA2cZeiaScxc2C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:01:24 GMT
+recorded_at: Fri, 23 Jun 2017 22:52:35 GMT
