--- a/www.nass.gov.ng/abcd883fbfadf2868b3440aebca41cf8190de939.yml
+++ b/www.nass.gov.ng/abcd883fbfadf2868b3440aebca41cf8190de939.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:09:37 GMT
+    - Fri, 23 Jun 2017 23:02:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=K2Myn9mnRY6XT-1E%2C1QjQ3; path=/
+    - PHPSESSID=HvO9%2Cd58nBzfT3ptY0YTA1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:09:37 GMT
+recorded_at: Fri, 23 Jun 2017 23:02:43 GMT
