--- a/www.nass.gov.ng/99d2ea1e878dc531fbbca3b6007eb4bef2d9f4d4.yml
+++ b/www.nass.gov.ng/99d2ea1e878dc531fbbca3b6007eb4bef2d9f4d4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:09:55 GMT
+    - Fri, 23 Jun 2017 23:03:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=iGeDL-Mh%2C5q52c3cMSgQM0; path=/
+    - PHPSESSID=EGOa7YAbDWTwH7B9f7geK2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:09:55 GMT
+recorded_at: Fri, 23 Jun 2017 23:03:13 GMT
