--- a/www.nass.gov.ng/325aa062b074b1e45b95fbde3a031314d612f727.yml
+++ b/www.nass.gov.ng/325aa062b074b1e45b95fbde3a031314d612f727.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:10:24 GMT
+    - Fri, 23 Jun 2017 23:03:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LjG7jdrU%2CoazjuyaDCRgK0; path=/
+    - PHPSESSID=MigAIL6Kb4EM8F35vkJ-s2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:10:24 GMT
+recorded_at: Fri, 23 Jun 2017 23:03:46 GMT
