--- a/www.nass.gov.ng/e3c8235d623bb367bfe377878e271725f758ee35.yml
+++ b/www.nass.gov.ng/e3c8235d623bb367bfe377878e271725f758ee35.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:11:44 GMT
+    - Fri, 23 Jun 2017 23:05:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CW-J9I2j-RN1P%2CSy81uBP3; path=/
+    - PHPSESSID=YhKFEIwUnayig8HTRNrct1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:11:44 GMT
+recorded_at: Fri, 23 Jun 2017 23:05:03 GMT
