--- a/www.nass.gov.ng/7cfab7ec2fd762b811a986ed13fa679909c9a07d.yml
+++ b/www.nass.gov.ng/7cfab7ec2fd762b811a986ed13fa679909c9a07d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:17:29 GMT
+    - Fri, 23 Jun 2017 23:09:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gAtb2BW1ljd%2CH-H0zBnjf0; path=/
+    - PHPSESSID=ulRSxV0pNDhukpL8mqpJo3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:17:29 GMT
+recorded_at: Fri, 23 Jun 2017 23:09:51 GMT
