--- a/www.nass.gov.ng/0010b4fbce9b158aa94343e072e10f654b40ae35.yml
+++ b/www.nass.gov.ng/0010b4fbce9b158aa94343e072e10f654b40ae35.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:26:40 GMT
+    - Fri, 23 Jun 2017 23:19:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CE89CTo83Fig5yiXXp5Dk3; path=/
+    - PHPSESSID=3KFIRLhpSewWqqRiBMg9J2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:26:40 GMT
+recorded_at: Fri, 23 Jun 2017 23:19:17 GMT
