--- a/www.nass.gov.ng/0e65f74ada4cd83f37dc32c82621731294a4e28e.yml
+++ b/www.nass.gov.ng/0e65f74ada4cd83f37dc32c82621731294a4e28e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:30:36 GMT
+    - Fri, 23 Jun 2017 23:22:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mAaUuJM-4NZvNzSmAN-sz0; path=/
+    - PHPSESSID=I%2Cw68tc09%2CytiX2zxUPDi2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:30:36 GMT
+recorded_at: Fri, 23 Jun 2017 23:22:45 GMT
