--- a/www.nass.gov.ng/097917a439e90b8c2a4e796e20254a51fd185aef.yml
+++ b/www.nass.gov.ng/097917a439e90b8c2a4e796e20254a51fd185aef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:31:56 GMT
+    - Fri, 23 Jun 2017 23:24:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fowEtvoeu4wZF0vc0fjw12; path=/
+    - PHPSESSID=AbC-W2Ta%2CCy%2C7%2CiuToMQp2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:31:57 GMT
+recorded_at: Fri, 23 Jun 2017 23:24:20 GMT
