--- a/www.nass.gov.ng/d17d90a474471ea3c96068bb0c4664398b4028ce.yml
+++ b/www.nass.gov.ng/d17d90a474471ea3c96068bb0c4664398b4028ce.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:34:27 GMT
+    - Fri, 23 Jun 2017 23:28:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=W6GR5tXQgbMo%2C-vchfEoJ0; path=/
+    - PHPSESSID=22hHeYejs5WrUE2IQxs1j0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:34:27 GMT
+recorded_at: Fri, 23 Jun 2017 23:28:34 GMT
