--- a/www.nass.gov.ng/f474511667a5a0d2209ded44531ce8192effd64b.yml
+++ b/www.nass.gov.ng/f474511667a5a0d2209ded44531ce8192effd64b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:43:53 GMT
+    - Fri, 23 Jun 2017 23:39:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=A%2C1PIDX3b81eMwU%2C8bRSB3; path=/
+    - PHPSESSID=uMGQYz8zMrH4mOI8KI5Bx2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:43:54 GMT
+recorded_at: Fri, 23 Jun 2017 23:39:23 GMT
