--- a/www.nass.gov.ng/12bbaec08d312ba24f84ad642d3ea60652fe5646.yml
+++ b/www.nass.gov.ng/12bbaec08d312ba24f84ad642d3ea60652fe5646.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:44:45 GMT
+    - Fri, 23 Jun 2017 23:40:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5XJJM9ORWlHGvG30HhuZ02; path=/
+    - PHPSESSID=Y8%2CEMtHAn-DcNVkPF8jal3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:44:45 GMT
+recorded_at: Fri, 23 Jun 2017 23:40:02 GMT
