--- a/www.nass.gov.ng/513234a44c43df2d38246dcd5d0c8e50836086e9.yml
+++ b/www.nass.gov.ng/513234a44c43df2d38246dcd5d0c8e50836086e9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:45:30 GMT
+    - Fri, 23 Jun 2017 23:40:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RgakL9M%2Cf%2Csbavjrbj34l0; path=/
+    - PHPSESSID=CGlAsKoIXjCE-zsGBhZp01; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:45:30 GMT
+recorded_at: Fri, 23 Jun 2017 23:40:46 GMT
