--- a/www.nass.gov.ng/977469a30e58cd721444b24dc3ed3ab4ffe397cc.yml
+++ b/www.nass.gov.ng/977469a30e58cd721444b24dc3ed3ab4ffe397cc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:46:17 GMT
+    - Fri, 23 Jun 2017 23:42:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zYcDpJIzGGGkSCaAmmV%2CJ1; path=/
+    - PHPSESSID=8%2C5fHekMB5rb1ESZC55eY2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:46:17 GMT
+recorded_at: Fri, 23 Jun 2017 23:42:41 GMT
