--- a/www.nass.gov.ng/bee87c5d50858d964510c6225b5f11353caad010.yml
+++ b/www.nass.gov.ng/bee87c5d50858d964510c6225b5f11353caad010.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:48:52 GMT
+    - Fri, 23 Jun 2017 23:44:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=B%2ChG60nuMoo6OzbuR%2CET63; path=/
+    - PHPSESSID=QAciYoU2Zjkvcos6W1BV30; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:48:52 GMT
+recorded_at: Fri, 23 Jun 2017 23:44:56 GMT
