--- a/www.nass.gov.ng/a7a1c1264937b3cd018926568f9b077bebb30ca2.yml
+++ b/www.nass.gov.ng/a7a1c1264937b3cd018926568f9b077bebb30ca2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:50:02 GMT
+    - Fri, 23 Jun 2017 23:46:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2C0QCCXc3rcRbWIsQ-FOtx3; path=/
+    - PHPSESSID=HirWwW9z8niOdZH5UkTMc0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:50:02 GMT
+recorded_at: Fri, 23 Jun 2017 23:46:11 GMT
