--- a/www.nass.gov.ng/88e5f4d49e2997901adef39797f3a2d567c7fb80.yml
+++ b/www.nass.gov.ng/88e5f4d49e2997901adef39797f3a2d567c7fb80.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:53:37 GMT
+    - Fri, 23 Jun 2017 23:50:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ds%2C3593zj3XC3vC-CxOh30; path=/
+    - PHPSESSID=W9n%2CWmnf1gER261dieNPk1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:53:38 GMT
+recorded_at: Fri, 23 Jun 2017 23:50:50 GMT
