--- a/www.nass.gov.ng/ddf2da29e12848a0a8deabb49851b8608c2ae342.yml
+++ b/www.nass.gov.ng/ddf2da29e12848a0a8deabb49851b8608c2ae342.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:57:39 GMT
+    - Fri, 23 Jun 2017 23:55:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=92s0-tVo6EE%2CFdjQ5sWaS1; path=/
+    - PHPSESSID=pajE9fkJX1b2G07sVCwzy1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:57:39 GMT
+recorded_at: Fri, 23 Jun 2017 23:55:59 GMT
